# OETraining

./: .gitignore  README.md  pyproject.toml
src/proj1/: mainwindow.py  mainwindow.ui  plotdialog.py  plotdialog.ui  res.qrc  res_rc.py  ui_mainwindow.py  ui_plotdialog.py  viewgraphics.py
src/proj1/docs/: test.xlsx  test1.xlsx  test2.xlsx  test3.xlsx  test4.xlsx  test5.xlsx  test6.xlsx
src/proj2/: main.py  mainwindow.py  mainwindow.ui  reconworker.py  res.qrc  res_rc.py  test.py  ui_mainwindow.py
src/proj3/: main.py  mainwindow.py  mainwindow.ui  res.qrc  ui_mainwindow.py
src/proj4/: mainwindow.py  mainwindow.ui  res.qrc  res_rc.py  test1.xlsx  ui_mainwindow.py
src/proj5/: mainwindow.py  mainwindow.ui  res.qrc  res_rc.py  test1.xlsx  ui_mainwindow.py
src/proj6/: core.py  correlation_analysis.py  data_preprocess.py  draw_spectra.py  preprocess_evolution.py  test.py  trainPCA_Ridge.py  trainPCA_SVR.py  trainPLS_VIP.py  usePCA_Ridge.py  usePCA_SVR.py  usePLS_VIP.py
src/proj6/docs/: m5spec.xlsx  mp5spec.xlsx  mp6spec.xlsx  propvals.xlsx  test.xlsx  test_actual.xlsx
src/proj7/: form.ui  main.py  mainwindow.py  mainwindow.ui  res.qrc  res_rc.py  ui_form.py  ui_mainwindow.py
src/proj7/core/: LaserBeam.py  LaserBeamPro.py  LaserResonator.py  LaserResonatorPro.py  Ruler.py  ViewGraphicsScene.py  __init__.py  pixel_scaler.py
src/proj7/docs/: test.xlsx  test1.xlsx
