[project]
name = "oetraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ftd2xx>=1.3.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
    "pyvista>=0.48.4",
    "scikit-learn>=1.8.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
